<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_show"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="group.smapx.remindalot.ShowActivity">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <TextView
            android:id="@+id/labelTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title"

            android:textAppearance="?android:textAppearanceMedium" />

        <TextView
            android:id="@+id/txtTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/labelTitle"
            android:hint="@string/title" />

        <TextView
            android:id="@+id/labelDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txtTitle"
            android:layout_marginTop="10dp"
            android:text="@string/description"
            android:textAppearance="?android:textAppearanceMedium" />

        <TextView
            android:id="@+id/txtDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/labelDescription"
            android:hint="@string/description" />

        <TextView
            android:id="@+id/labelDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/txtDescription"
            android:layout_marginTop="10dp"
            android:text="@string/date"
            android:textAppearance="?android:textAppearanceMedium" />

        <TextView
            android:id="@+id/txtDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/labelDate"
            android:hint="@string/placeholderDate" />

        <TextView
            android:id="@+id/labelContacts"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/txtDate"
            android:layout_marginTop="10dp"
            android:text="@string/contacts"
            android:textAppearance="?android:textAppearanceMedium" />

        <LinearLayout
            android:id="@+id/listContacts"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/labelContacts"
            android:hint="@string/contacts"
            android:orientation="vertical"
            android:scrollbars="none" />

        <TextView
            android:id="@+id/labelLocation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/listContacts"
            android:layout_marginTop="10dp"
            android:text="@string/location"
            android:textAppearance="?android:textAppearanceMedium" />

        <TextView
            android:id="@+id/txtLocation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/labelLocation"
            android:hint="@string/placeholderLocation" />

        <fragment
            android:id="@+id/map"
            class="com.google.android.gms.maps.MapFragment"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_below="@id/txtLocation" />

        <View
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_alignTop="@+id/map"
            android:src="@android:color/transparent" />

    </RelativeLayout>
</ScrollView>
